--- a/map.html
+++ b/map.html
@@ -23,7 +23,7 @@
     async function prepMap() {
       try {
         //Request naar nominatim
-        const response = await fetch("https://nominatim.openstreetmap.org/search?format=json&q=Roermond", {
+        const response = await fetch("https://nominatim.openstreetmap.org/search?format=json&q=Gilde Opleidingen", { //verander naar gilde opleidingen
           headers: { "Accept": "application/json" }
         });
         const data = await response.json();
@@ -33,7 +33,6 @@
           return;
         }
 
-        //Eerste resultaat
         const lat = parseFloat(data[0].lat);
         const lon = parseFloat(data[0].lon);
 
@@ -46,11 +45,21 @@
           attribution: '© OpenStreetMap'
         }).addTo(map);
 
-        // Zet marker neer
+        // Voeg markers toe voor alle resultaten
+        const bounds = [];
+        data.forEach(loc => {
+        const lat = parseFloat(loc.lat);
+        const lon = parseFloat(loc.lon);
+
         L.marker([lat, lon])
           .addTo(map)
-          .bindPopup(`${data[0].display_name}`)
-          .openPopup();
+          .bindPopup(loc.display_name);
+
+        bounds.push([lat, lon]);
+    });
+
+    // Pas de kaart aan zodat alle markers zichtbaar zijn
+    map.fitBounds(bounds);
 
       } catch (error) {
         console.error("Fout bij ophalen data:", error);
