--- a/map.html
+++ b/map.html
@@ -1,9 +1,8 @@
 
 <!DOCTYPE html>
-<html lang="nl">
 <head>
   <meta charset="UTF-8">
-  <title>Roermond map</title>
+  <title>Gilde Opleidingen map</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
@@ -15,7 +14,7 @@
   </style>
 </head>
 <body>
-  <h2>Roermond map</h2>
+  <h2>Gilde Opleidingen map</h2>
   <div id="map"></div>
   
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
