--- a/map.html
+++ b/map.html
@@ -20,7 +20,7 @@
     async function prepMap() {
       try {
         //Request naar nominatim
-        const response = await fetch("https://nominatim.openstreetmap.org/search?format=json&q=Gilde Opleidingen", { //verander naar gilde opleidingen
+        const response = await fetch("https://nominatim.openstreetmap.org/search?format=json&q=Gilde Opleidingen", {
           headers: { "Accept": "application/json" }
         });
         const data = await response.json();
